prevent nav links from breaking on small screen

--- a/resources/assets/css/components/outer.less
+++ b/resources/assets/css/components/outer.less
@@ -105,6 +105,10 @@
     }
   }
 }
+.navigation-link {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 .calls-to-action {
   .flexy(wrap);
   button {
